<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Preference Header -->
    <string name="prefs_header_wifidirect">Wifi Direct</string>

    <!-- Ports Preference -->
    <string name="prefs_key_wifidirect_server_port" translatable="false">wifidirect_server_port</string>
    <string name="prefs_title_wifidirect_server_port">Server Port (From 5001 to 6535, -1 for dynamically generate)</string>
    <string name="prefs_tip_wifidirect_server_port_invalid">Invalid value</string>
    <string name="prefs_key_wifidirect_client_port" translatable="false">wifidirect_client_port</string>
    <string name="prefs_title_wifidirect_client_port">Client Port (From 5001 to 65535, -1 for dynamically generate)</string>
    <string name="prefs_tip_wifidirect_client_port_invalid">Invalid value</string>

    <!-- BufferSize Preference -->
    <string name="prefs_key_wifidirect_buffer_size" translatable="false">wifidirect_buffer_size</string>
    <string name="prefs_title_wifidirect_buffer_size">Buffer size (Must be same with target device)</string><!-- TODO: is this description precise?-->
    <string name="prefs_tip_wifidirect_buffer_size_invalid">Invalid value</string>

    <!-- Timeout Preference -->
    <string name="prefs_key_wifidirect_timeout" translatable="false">wifidirect_timeout</string>
    <string name="prefs_title_wifidirect_timeout">Timeout (ms)</string>
    <string name="prefs_tip_wifidirect_timeout_invalid">Invalid value</string>

    <string name="error_wifidirect_service_request_add_failed" formatted="true">Service request add failed: <xliff:g id="error_code" example="2">%1$d</xliff:g></string>
    <string name="error_wifidirect_service_request_remove_failed" formatted="true">Service request add failed: <xliff:g id="error_code" example="2">%1$d</xliff:g></string>
    <string name="error_wifidirect_service_discovering_start_failed" formatted="true">Service discover start failed: <xliff:g id="error_code" example="2">%1$d</xliff:g></string>
    <string name="error_wifidirect_service_discovering_stop_failed" formatted="true">Service discover stop failed: <xliff:g id="error_code" example="2">%1$d</xliff:g></string>
    <string name="error_wifidirect_local_service_add_failed" formatted="true">LocalService add failed: <xliff:g id="error_code" example="2">%1$d</xliff:g></string>
    <string name="error_wifidirect_local_service_remove_failed" formatted="true">LocalService remove failed: <xliff:g id="error_code" example="2">%1$d</xliff:g></string>
</resources>